--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A CLI tool to resize images by width, height, or ratio",
   "type": "module",
   "bin": {
-    "rizer": "./index.js"
+    "rizer": "bin/cli.js"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node bin/cli.js"
   },
   "dependencies": {
     "chalk": "^5.3.0",
