--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "start": "node bin/cli.js"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
+    "cosmiconfig": "^9.0.0",
+    "inquirer": "^12.5.2",
     "sharp": "^0.33.1"
   },
   "keywords": [
